<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/app_default_padding"
    tools:context="com.inschlag.lukas.bakingtime.RecipeDetailFragment">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/videoPlayer"
        app:fastforward_increment="1000"
        app:rewind_increment="1000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:resize_mode="fixed_width" />

    <TextView
        style="@style/AppTheme.ListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_default_padding"
        android:text="@string/desc"
        android:textColor="?colorAccent" />

    <TextView
        android:id="@+id/stepDesc"
        style="@style/AppTheme.ListItemSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_default_padding" />
</LinearLayout>
