...
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/grey"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btnPrevious"
            android:text="@string/previous"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btnNext"
            android:text="@string/next"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

...
