<resources>
    <string name="app_name">BakingTime</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="img_desc_recipe">Recipe image</string>
    <string name="vid_desc_recipe">Recipe has video</string>
    <string name="play_desc">Play video</string>
    <string name="pause_desc">Pause video</string>
    <string name="placeholder_title">This is a title</string>
    <string name="placeholder_subtitle">This is a subtitle</string>
    <string name="servings">Servings: %d</string>
    <string name="ingredients">Ingredients</string>
    <string name="stepX">Step %d: %s</string>
    <string name="desc">Description</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="showSteps">Show steps</string>
    <string name="showIngredients">Show Ingredients</string>
    <string name="stepErr">Step details could not be loaded!</string>
    <string name="appwidget_text">Ingredients:\n</string>
    <string name="appwidget_text_line">%s: %.2f %s</string>
    <string name="show_widget">Show in widget</string>
    <string name="no_widget">No recipe selected for the widget yet.</string>
    <string name="add_widget">Add widget</string>
</resources>
